--- a/css/index.css
+++ b/css/index.css
@@ -356,6 +356,12 @@ header nav a {
   justify-content: space-around;
 }
 
+.about-bottom-content {
+  display: flex;
+  margin: 40px 10px;
+  justify-content: space-around;
+}
+
 .bottom-content .text-container {
   padding-right: 4%;
 }
